gcc/testsuite/rust/rustc/ui/consts/const-eval/index_out_of_bounds.rs
static FOO: i32 = [][0];
// { dg-error ".E0080." "" { target *-*-* } .-1 }

fn main() {}

